--- a/week1_report.Rmd
+++ b/week1_report.Rmd
@@ -25,21 +25,20 @@ library(compositions)
 This function takes a set of variables in a list (each of them matrices or vectors) and returns a vector of zeros and ones. The component in position _i_, associated to the _i_ position of the input vector, should be one if that matrix add up to a constant value and zero otherwise. This could be adjusted to add up approximately to a constant because of the roundings in transformed variables and so.
 
 
-```{r}
+```{r} 
 which_coda=function(l,eps){ # l = list of variables, # eps = allowed error
-  result = numeric()
+  result = numeric(length(l))
+  cont=1
   for (i in l){
     if (is.integer(dim(i)[2])==TRUE){
       range = max(rowSums(i))-min(rowSums(i))
-      if (range<=eps){result <- c(result, 1)}
-      else{result <- c(result, 0)}
+      if (range<=eps){result[cont] = 1}
     }
-    else{result <- c(result, 0)}
+    cont=cont+1
   }
   return(result)
 }
 ```
-
 
 We are doing a tiny example for a simple vector which cannot be compositional data by definition, a matrix which apparently is a compositional vector and a matrix that is not. 
 
@@ -62,6 +61,7 @@ Vector:
 ```{r}
 v1
 ```
+
 ```{}
 [1] 1 2 2 1
 ```
@@ -98,18 +98,22 @@ m2
 
 Results if no deviation for the sum of the components is allowed:
 ```{r}
-which_coda(lex,0)
+which_coda(lex,0.1)
 ```
 
 ```{}
 [1] 0 0 0
 ```
 
+```{r}
+m2
+```
+
 
 
 Results if a tiny (0.001) deviation for the sum of the components is allowed:
 ```{r}
-which_coda(lex,0.001)
+which_coda(lex,111)
 ```
 
 ```{}
@@ -117,7 +121,7 @@ which_coda(lex,0.001)
 ```
 
 
-### Function 2. Closed form operator.
+### Function 2. Closure operator.
 
 This function returns the closed form of a given compositional vector (given as a matrix).
 
@@ -192,15 +196,79 @@ ternary=function(mat){ # depends only in the data matrix containing the composit
 }
 ```
 
-And here, one example with out 4 row "m2" matrix:
 
-![Figure 1: Ternary plot 1](https://raw.githubusercontent.com/i-rb/coda/main/img/ternary1.png)
-```{r,fig.width=5, fig.height=5}
-wd=getwd()
-png(filename=paste0(wd, "/img/ternary1.png"))
-ternary(m2)
-dev.off()
+```{r,fig.height=5,fig.width=5}
+ternary=function(mat, leg){ # depends only in the data matrix containing the compositional datA
+  if (missing(leg)){leg = c("x1","x2","x3")}
+  x = mat[1,][1]
+  y = mat[1,][2]
+  z = mat[1,][3]
+  p=c(0.5*(2*y+z)/(x+y+z), sqrt(3/2)*(z/(x+y+z)))
+  plot(p[1],p[2],xlim=c(-0.1,1.1),ylim=c(-0.1,1), pch=20,xlab=" ",ylab=" ", cex=0.8,frame.plot = FALSE, axes=FALSE)
+  if (nrow(mat)>1){
+    for (i in 2:nrow(mat)){
+    x = mat[i,][1]
+    y = mat[i,][2]
+    z = mat[i,][3]
+    p=c(0.5*(2*y+z)/(x+y+z), sqrt(3/2)*(z/(x+y+z)))
+    points(p[1],p[2],pch=20, cex=0.8)
+    }
+  }
+  text(-0.04, -0.04, leg[1],col="darkblue")
+  text(1.04, -0.04, leg[2],col="darkgreen")
+  text(0.5, 0.91, leg[3],col="darkred")
+  segments(0,0,1,0,col="darkgreen")
+  segments(0.5,sqrt(3/4),0,0,col="darkblue")
+  segments(0.5,sqrt(3/4),1,0,col="darkred")
+  
+  redlist = list(c(0.2,0.8),c(0.4,0.6),c(0.6,0.4),c(0.8,0.2))
+  for (i in redlist){
+      x = i[1]
+      y = 0
+      z = i[2]
+      p1=c(0.5*((2*y+z)/(x+y+z)), sqrt(3/4)*(z/(x+y+z)))
+      text(p1[1]-0.03, p1[2]+0.03, i[1]*100,col="darkblue",cex=0.8,srt=-60)
+      x = 0
+      y = i[1]
+      z = i[2]
+      p2=c(0.5*((2*y+z)/(x+y+z)), sqrt(3/4)*(z/(x+y+z)))
+      segments(p1[1],p1[2],p2[1],p2[2],col="darkred",lty="dotdash")
+  }
+  for (i in redlist){
+      x = i[1]
+      y = 0
+      z = i[2]
+      p1=c(0.5*((2*y+z)/(x+y+z)), sqrt(3/4)*(z/(x+y+z)))
+      x = i[1]
+      y = i[2]
+      z = 0
+      p2=c(0.5*((2*y+z)/(x+y+z)), sqrt(3/4)*(z/(x+y+z)))
+      text(p2[1]-0.03, p2[2]-0.03, i[1]*100,col="darkgreen",cex=0.8,srt=60)
+      segments(p1[1],p1[2],p2[1],p2[2],col="darkblue",lty="dotdash")
+  }
+  for (i in redlist){
+      x = 0
+      y = i[2]
+      z = i[1]
+      p1=c(0.5*((2*y+z)/(x+y+z)), sqrt(3/4)*(z/(x+y+z)))
+      text(p1[1]+0.05, p1[2], i[1]*100,col="darkred",cex=0.8,srt=0)
+      x = i[1]
+      y = i[2]
+      z = 0
+      p2=c(0.5*((2*y+z)/(x+y+z)), sqrt(3/4)*(z/(x+y+z)))
+      segments(p1[1],p1[2],p2[1],p2[2],col="darkgreen",lty="dotdash")
+  }
+}
 ```
+
+The ternary function has been updatef following the Thibault code in 'Analyzing the impacts of socio-economic factors on French departmental elections with CoDa methods (Supplementary material)':
+
+```{r, fig.width=5,fig.height=5}
+ternary(m2,c("Renault","Jaguar","Seat"))
+```
+
+**2 ISSUES: EXTERNAL ARROWS (less important), KEEP THE FIG SIZE! (here it is adjusted through the Rmarkdown opts)**
+
 
 I will test the 'compositions' ternary diagram:
 
@@ -379,6 +447,7 @@ I cannot get the equality between norm(x-y) and distance(x,y), despite it is sta
 ```{r}
 dist(x1,x2)
 ```
+
 ```{}
 [1] 2.1606
 ```
@@ -409,11 +478,15 @@ norm(x1c-x2c) # composition package norm
 
 The linear operator is defined as $A\boxdot\mathbf{x} = \mathcal{C}\left(\prod_{j=1}^D x_j^{a_{1j}},...,\prod_{j=1}^D x_j^{a_{Dj}}\right)^T$ for $A$ a DxD matrix and $x$ a 1xD vector.
 
+ADD PROPERTY CHECK 
+
 ```{r}
 lin = function (A, x){ # A matrix, x vector 1xD
-  vec=numeric()
+  vec=numeric(length(x))
+  c=0
   for (i in 1:nrow(A)){
-    vec=c(vec,prod(x[i]**A[i,]))
+    c=c+1
+    vec[c]=prod(x[i]**A[i,])
   }
   return(C(t(vec)))
 }
@@ -423,6 +496,7 @@ Here the function is tested:
 
 ```{r}
   v3=matrix(c(0.4,0.2,0.4)) # defining a vector
+
   m3 = matrix(c(0.4,0.4,0.3))
   m3 <- cbind(m3, c(0.3,0.1,0.3)) # defining a square matrix
   m3 <- cbind(m3, c(0.2,0.5,0.4)) 
@@ -492,6 +566,7 @@ Here, the alr transformation is used for a new vector $x_3$:
 ```{r}
 x3=c(0.4,0.2,0.4)
 ilr(x3)
+
 ```
 ```{}
            [,1]
@@ -606,12 +681,12 @@ V_D(3) # our brand new function
 ```
 
 
-Now, it is possible to update the ilr function:
+Now, it is possible to update the ilr function: 
 
 ```{r}
 ilr = function(x){ # x matrix N x D
   x = C(x)
-  V = V_D(dim(x)[2])
+  V = V_D(dim(x)[2]) 
   return(t(t(V)%*%t(log(x))))
 }
 ```
@@ -643,6 +718,73 @@ attr(,"class")
 ```
 
 
+Here I am trying to recover the result of the compositions package by permuting the $V_D$ matrix (for the easy D=3 case):
+
+```{r}
+ilr2 = function(x){ # x matrix N x 3 (only works with D=3)
+  x = C(x)
+  V = V_D(dim(x)[2])
+  V2 = cbind(V_D(dim(x)[2])[,2],V_D(dim(x)[2])[,1])
+  return(t(t(V2)%*%t(log(x))))
+}
+```
+
+With the simple permutation, it is achieved the same order in the coordinates.
+
+```{r}
+ilr2(testvec)
+```
+
+
+```{r}
+ilr3 = function(x){ # x matrix N x 3 (only works with D=3)
+  x = C(x)
+  V = V_D(dim(x)[2])
+  V2 = -1*cbind(V_D(dim(x)[2])[,2],V_D(dim(x)[2])[,1])
+  return(t(t(V2)%*%t(log(x))))
+}
+```
+
+And multiplying by -1 we get it:
+
+```{r}
+ilr3(testvec)
+```
+
+
+What is happening in the 'compositions' package? They use different methods, but not ours. This is their usual one. It seems that they construct every $V_D$ from the $V_2$ and theirs is the same as our $V_2$ but permuting their elements. (I.e.: theirs: $(-0.7071,0.7071)$ and ours $(0.7071,-0.7071)$.)
+
+```{} 
+function (W = c(1, -1)) # gsi.buildilrBase
+{
+    if (length(W) < 2) {
+        return(ilrBase(D = 1))
+    }
+    if (length(dim(W)) == 0) {
+        return(ilrBase(D = 2))
+    }
+    if (length(dim(W)) > 0) {
+        W = as.matrix(W)
+        nc = ncol(W)
+        D = nrow(W)
+        isPos = (W > 0)
+        isNeg = (W < 0)
+        nPos = matrix(1, D, D) %*% isPos
+        nNeg = matrix(1, D, D) %*% isNeg
+        W = (isPos * nNeg - isNeg * nPos)
+        nn = sapply(1:nc, function(i) {
+            1/norm.rmult(W[, i])
+        })
+        nn = matrix(nn, ncol = ncol(W), nrow = nrow(W), byrow = TRUE)
+        W = W * nn
+        return(W)
+    }
+}
+```
+
+
+#### ILR Inverse
+
 Now we should also update the ilr inverse, that we will need for the regressions section:
 
 ```{r}
@@ -653,10 +795,10 @@ inverseilr=function(x){ # x is x*, matrix of coordinates
 ```
 
 It works!! (There is an issue: ilr(m1) instead of the matrix of coordinates returns the transpose of the matrix of coordinates)
-
 ```{r}
 inverseilr(t(ilr(m1)))
 ```
+
 
 ```{}
           [,1]      [,2]      [,3]
@@ -976,7 +1118,7 @@ balance = function(x,A,B){ # x matrix NxD (output Nx1), A, B vector of positions
   Na = dim(gA)[2]
   Nb = dim(gB)[2]
   K = (Na*Nb*(Na+Nb))**(-0.5)
-  res = numeric()
+  res = numeric(dim(x)[1])
   for (t in (1:dim(x)[1])){
     res[t] = K*sum(Nb*log(gA[t,])) - K*sum(Na*log(gB[t,])) 
   }
@@ -1026,24 +1168,29 @@ $\hat{B} = (X^TX)^{-1}X^TY$
 
 ```{r}
 mlm = function(Y,X){ # only the dependent and independent matrices are needed
-  B = ((solve(t(X)%*%X))%*%t(X))%*%Y
-  return(B)
+  ## use solve(t(X),Y) or QR algorithm qr.solve(), cholesky (I HAVE USED QR)
+  B = qr.solve(t(X)%*%X,t(X)%*%Y)
+  return(round(B,8))
 }
 ```
 
-We have already defined $m_1$ and $m_2$, we can use them in the example:
+We have already defined $m_1$ and $m_2$, extending the latter, we can use them in the example:
 
 ```{r}
-mlm(m1,m2)
+m4 = cbind(m2,c(1,2,3,4))
+mlm(m1,m4)
 ```
+
 
 ```{}
-              [,1]        [,2]        [,3]
-[1,] 1.000000e+00  0.52192398  1.30694092
-[2,] 3.191891e-16 -0.00321913 -0.04507786
-[3,] 2.220446e-16  0.38327460  0.36584817
-
+     [,1]        [,2]       [,3]
+[1,]    1  0.69642776  3.7499956
+[2,]    0 -0.01785596 -0.2499936
+[3,]    0  0.26785683 -1.2500017
+[4,]    0  0.01071427  0.1499999
 ```
+
+### Function 18Bis. Adding covariances.
 
 Now that we have this, we can now complete the [regressions section](#link1). However, it will be completed here (in order to keep the order of computation):
 
@@ -1072,12 +1219,12 @@ $\mathrm{ilr}(\mathbf{Y}_i) = \mathbf{b}_0^*+ \sum_{q=1}^Q\mathrm{ilr}(\mathbf{X
     tx = matrix(NaN,dim(Y)[1])
     if (!is.na(X[[1]][1,1])){
       for (var in X){
-        tx = cbind(tx,var)
+        tx = cbind(tx,compositions::ilr(var)) ## here compositions::ilr to recover their result
       }
     }
     if (!is.na(Z[[1]][1,1])){
       for (var in Z){
-        tx = cbind(tx,ilr(var))
+        tx = cbind(tx,var)
       }
     }
     tx = tx[,-1]
@@ -1094,58 +1241,62 @@ $\mathrm{ilr}(\mathbf{Y}_i) = \mathbf{b}_0^*+ \sum_{q=1}^Q\mathrm{ilr}(\mathbf{X
     print("--------------------------")
     print("B in the simplex:")
     print(inverseilr(t(res)))
-}
+  }
 ```
 
-We should define new matrices, as the past ones had colinearity problems. 
+However... I do not get the same results (not even near). The divergence arises in the ilr function If I change the ilr functions to the 'compositions' package ones ONLY IN THE EXOGENOUS VARIABLE CASE, I can recover they results.
+
+
 
 ```{r}
 m1 = matrix(c(0.25,0.249999,0.2,0.2))
-m1 <- cbind(m1, c(10, 11, 192, 240))
-m1 <- cbind(m1, c(293, 323, 11, 20)) # definig the comp matrix
+m1 <- cbind(m1, c(0.2, 0.99, 1.2, 0.8))
+m1 <- cbind(m1, c(0.4, 0.15, 1, 0.9)) # definig the comp matrix
 
-m2 = matrix(c(0.25,201,0.2,222))
-m2 <- cbind(m2, c(0.3, 0.9, 202, 0.35))
-m2 <- cbind(m2, c(2033, 0.45, 0.5, 0.65)) # definig the non comp matrix
+m2 = matrix(c(0.25,0.23,0.2,0.8))
+m2 <- cbind(m2, c(0.3, 0.9, 0.9, 0.35))
+m2 <- cbind(m2, c(1.2, 0.45, 0.5, 0.65)) # definig the non comp matrix
 
 a<-list(m1)
-```
 
-It works!! Of course, this function can be developed, to raise errors, s.deviations, etc, take "easier" inputs and print a more structured output. This is a basic version with the most necessary. 
+c_lm(Y=m1,X=list(m2),comp=1) #there is no Z
+```
 
 ```{r}
-c_lm(m1,list(m2),comp=0) #there is no Z
+compositions::ilrInv(lm(compositions::ilr(m1)~0+compositions::ilr(m2))$coefficients)
 ```
 
-```{}
-[1] "Transformed endogenous:"
-         [,1] [,2] [,3]
-[1,] 0.250000   10  293
-[2,] 0.249999   11  323
-[3,] 0.200000  192   11
-[4,] 0.200000  240   20
-[1] "--------------------------"
-[1] "Transformed exogenous"
-       [,1]   [,2]    [,3]
-[1,]   0.25   0.30 2033.00
-[2,] 201.00   0.90    0.45
-[3,]   0.20 202.00    0.50
-[4,] 222.00   0.35    0.65
-[1] "--------------------------"
-[1] "B matrix in the ILR space:"
-             [,1]        [,2]       [,3]
-[1,] 0.0010521843 0.615986413 0.77286824
-[2,] 0.0009892904 0.948249071 0.05572805
-[3,] 0.0001226943 0.004707011 0.14401305
-[1] "--------------------------"
-[1] "B in the simplex:"
-          [,1]      [,2]      [,3]      [,4]
-[1,] 0.2250829 0.3717437 0.3019552 0.1012181
-[2,] 0.2210437 0.4788849 0.1559449 0.1441265
-[3,] 0.2493801 0.2503049 0.2755440 0.2247710
+Moreover:
+
+```{r}
+inverseilr(t(ilr(m2)))
+```
+
+```{r}
+compositions::ilrInv(compositions::ilr(m2))
+```
+```{r}
+C(m2)
+```
+
+```{r}
+m1c = compositions::acomp(m1)
+m2c = compositions::acomp(m2)
+```
+
+```{r}
+lm(m1c ~ 0 + m2c)
+```
+
+... This coincides with the "standard" multivariate regression (without transforming the variables to the coordinate space). I think theirs is not complete.
+
+```{r}
+mlm(C(m1),C(m2)) # but this is the direct regression. Not taking into account the transformation and the inverse transformation.
 ```
 
 
+
+I should add the intercept case.
 
 # 3. Creating a Class
 
@@ -1158,7 +1309,6 @@ as.comp <- function(x){
   if(!inherits(x, "comp")) class(x) <- c("comp", class(x)) # this is to keep the original class
   C(x)
 }
-
 ```
 
 ```{r}
